# SherpaDeploy

./: .gitignore  CMakeLists.txt  README.md
cmake/: ittapi.cmake  mnn.cmake  ncnn.cmake  opencl.cmake  openvino.cmake
runtime/core/: circular-buffer.cc  circular-buffer.h  context-graph.cc  context-graph.h  display.h  endpoint.cc  endpoint.h  features.cc  features.h  file-utils.cc  file-utils.h  hypothesis.cc  hypothesis.h  math.h  microphone.cc  microphone.h  resample.cc  resample.h  symbol-table.cc  symbol-table.h  test-context-graph.cc  test-resample.cc  text-utils-test.cc  text-utils.cc  text-utils.h  utils.cc  utils.h  wave-reader.cc  wave-reader.h  wave-writer.cc  wave-writer.h
runtime/mnn/: CMakeLists.txt  decoder.cc  decoder.h  greedy-search-decoder.cc  greedy-search-decoder.h  mnn-utils.cc  mnn-utils.h  model.cc  model.h  modified-beam-search-decoder.cc  modified-beam-search-decoder.h  recognizer.cc  recognizer.h  sherpa-mnn-microphone.cc  sherpa-mnn.cc  stream.cc  stream.h  zipformer-model.cc  zipformer-model.h
runtime/mnn/c-api/: CMakeLists.txt  c-api.cc  c-api.h
runtime/ncnn/: CMakeLists.txt  conv-emformer-model.cc  conv-emformer-model.h  decoder.cc  decoder.h  generate-int8-scale-table.cc  greedy-search-decoder.cc  greedy-search-decoder.h  lstm-model.cc  lstm-model.h  meta-data.cc  model.cc  modified-beam-search-decoder.cc  modified-beam-search-decoder.h  poolingmodulenoproj.cc  recognizer.cc  recognizer.h  sherpa-ncnn-alsa.cc  sherpa-ncnn-microphone.cc  sherpa-ncnn-vad.cc  sherpa-ncnn.cc  silero-vad-model-config.cc  silero-vad-model.cc  silero-vad-model.h  simpleupsample.cc  stack.cc  stream.cc  stream.h  tensorasstrided.cc  voice-activity-detector.cc  voice-activity-detector.h  zipformer-model.cc  zipformer-model.h
runtime/openvino/: CMakeLists.txt  decoder.h  greedy-search-decoder.cc  greedy-search-decoder.h  model.cc  model.h  modified-beam-search-decoder.cc  modified-beam-search-decoder.h  recognizer.cc  recognizer.h  sherpa-openvino-microphone.cc  sherpa-openvino.cc  stream.cc  stream.h  zipformer-model.cc  zipformer-model.h
runtime/openvino/c-api/: CMakeLists.txt  c-api.cc  c-api.h
runtime/sherpa-onnx/csrc/: CMakeLists.txt  sherpa-onnx-microphone.cc
sherpa-onnx/csrc/: sherpa-onnx-microphone.cc
